Envoy/configs/lds.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http

              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/public"
                        route:
                          auto_host_rewrite: true
                          cluster: publicservice
                        typed_per_filter_config:
                          envoy.filters.http.ext_authz:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                            disabled: true

                      - match:
                          prefix: "/protected"
                        route:
                          auto_host_rewrite: true
                          cluster: protectedservice

              http_filters:
                - name: envoy.filters.http.ext_authz
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                    transport_api_version: V3

                    http_service:
                      server_uri:
                        uri: authservice
                        cluster: authservice
                        timeout: 30s

                      authorization_request:
                        headers_to_add:
                          - key: "x-authz-header1"
                            value: "%REQ(x-request-id)%"

                      authorization_response:
                        allowed_upstream_headers:
                          patterns:
                            - exact: x-current-user

                - name: envoy.filters.http.local_ratelimit
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                    stat_prefix: http_local_rate_limiter
                    token_bucket:
                      max_tokens: 2
                      tokens_per_fill: 2
                      fill_interval: 5s
                    filter_enabled:
                      runtime_key: local_rate_limit_enabled
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
                    filter_enforced:
                      runtime_key: local_rate_limit_enforced
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
                    response_headers_to_add:
                      - append: false
                        header:
                          key: x-local-rate-limit
                          value: "true"
                    local_rate_limit_per_downstream_connection: false

                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                common_tls_context:
                  tls_certificates:
                    certificate_chain:
                      filename: /var/lib/envoy/https/cacert.pem
                    private_key:
                      filename: /var/lib/envoy/https/cakey.pem
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_certificates:
                certificate_chain:
                  filename: /var/lib/envoy/https/cert.pem
                private_key:
                  filename: /var/lib/envoy/https/key.pem
              alpn_protocols: ["h2,http/1.1"]
              tls_params:
                tls_minimum_protocol_version: "TLSv1_2"
